bug fixes, loading button, file size check on application submission, warning emails sent for pitch deadlines

--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -120,6 +120,13 @@ a {
   background-color: #EF265F !important;
 }
 
+.alert-link {
+  line-height: inherit !important;
+  vertical-align: inherit !important;
+  font-weight: bold;
+  color: #df0031 !important;
+}
+
 .pitch_ttl {
   margin-top: 1em;
 }
