--- a/app/views/applies/editor.html.erb
+++ b/app/views/applies/editor.html.erb
@@ -44,60 +44,108 @@
     <% end %>
   </div>
 <% else %>
-  <%= form_for @application do |f| %>
-    <% if @application.errors.any? %>
-      <h2><%= pluralize(@application.errors.count, "error")%> prevented this application from submitting:</h2>
-      <ul>
-        <% @application.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-        <% end %>
-      </ul>
-    <% end %>
-    <span>First Name</span>
-    <%= f.text_field :first_name, required: true, placeholder: "First", value: current_user.first_name %>
-    <br />
-    <span>Last Name</span>
-    <%= f.text_field :last_name, required: true, placeholder: "Last", value: current_user.last_name %>
-    <br />
-    <span>Email Address</span>
-    <%= f.email_field :email, required: true, placeholder: "Email", value: current_user.email %>
-    <span>Grade Level</span>
-    <%= f.select :grade, options_for_select(["College", "12th grade", "11th grade", "10th grade", "9th grade"]), :prompt => "Select a grade", value: @application.grade %>
-    <br />
-    <% if @application.resume.present? %>
-      <span>Resume:</span>
-      <iframe style="width: 100%; height: 600px;" src="<%= @application.resume %>"></iframe>
-      <span class="d-block">Upload an updated resume (optional):</span>
-      <%= f.file_field :resume %>
-    <% else %>
-      <span class="d-block mb-3 mt-3">Upload your resume (pdf):</span>
-      <%= f.file_field :resume %>
-    <% end %>
-    <p>Give one piece of feedback for each of the published articles below. What, if anything, is the writer missing from <a target="_blank" href="/writing-the-perfect-article#article-requirements">these questions</a>?</p>
-    <p>1. <%= link_to "Is Private School Or Public School Better for You?", "https://www.theteenmagazine.com/is-private-school-or-public-school-better-for-you", target: "_blank" %></p>
-    <p>2. <%= link_to "Rejection Sensitivity: Causes and How to Cope, for Teenagers", "https://www.theteenmagazine.com/rejection-sensitivity-causes-and-how-to-cope-for-teenagers", target: "_blank" %></p>
-    <p>3. <%= link_to "Fall Fashion Staples You Must Have in Your Wardrobe", "https://www.theteenmagazine.com/fall-fashion-staples-you-must-have-in-your-wardrobe", target: "_blank" %></p>
-    <%= f.text_area :editor_feedback, required: true, placeholder: "Write your feedback here..." %>
+  <div id="submit-application-form">
+    <%= form_for @application do |f| %>
+      <% if @application.errors.any? %>
+        <h6 class="pt-3 text-danger"><%= pluralize(@application.errors.count, "error")%> prevented this application from submitting:</h6>
+        <ul class="mb-4">
+          <% @application.errors.full_messages.each do |msg| %>
+          <li class="text-danger"><h6><%= msg %></h6></li>
+          <% end %>
+        </ul>
+      <% end %>
+      <span>First Name</span>
+      <%= f.text_field :first_name, placeholder: "First", value: current_user.first_name %>
+      <span>Last Name</span>
+      <%= f.text_field :last_name, placeholder: "Last", value: current_user.last_name %>
+      <span>Email Address</span>
+      <%= f.email_field :email, placeholder: "Email", value: current_user.email %>
+      <span>Grade Level</span>
+      <%= f.select :grade, options_for_select(["College", "12th grade", "11th grade", "10th grade", "9th grade"]), :prompt => "Select a grade", value: @application.grade %>
+      <% if @application.resume.present? %>
+      <div class="mb-4 mt-4 d-block">
+        <span>Resume:</span>
+        <iframe style="width: 100%; height: 600px;" src="<%= @application.resume %>"></iframe>
+        <div class="d-block">
+          <span>Upload an updated resume (optional):</span>
+          <%= f.file_field :resume, id: "pdf-file-resume" %>
+        </div>
+      </div>
+      <% else %>
+      <div class="mb-4 mt-4 d-block">
+        <span>Upload an updated resume (optional):</span>
+        <%= f.file_field :resume, id: "pdf-file-resume" %>
+      </div>
+      <% end %>
+      <p>Give one piece of feedback for each of the published articles below. What, if anything, is the writer missing from <a target="_blank" href="/writing-the-perfect-article#article-requirements">these questions</a>?</p>
+      <p>1. <%= link_to "Is Private School Or Public School Better for You?", "https://www.theteenmagazine.com/is-private-school-or-public-school-better-for-you", target: "_blank" %></p>
+      <p>2. <%= link_to "Rejection Sensitivity: Causes and How to Cope, for Teenagers", "https://www.theteenmagazine.com/rejection-sensitivity-causes-and-how-to-cope-for-teenagers", target: "_blank" %></p>
+      <p>3. <%= link_to "Fall Fashion Staples You Must Have in Your Wardrobe", "https://www.theteenmagazine.com/fall-fashion-staples-you-must-have-in-your-wardrobe", target: "_blank" %></p>
+      <%= f.text_area :editor_feedback, placeholder: "Write your feedback here...", class: "required" %>
 
-    <p>Choose one or two paragraphs from one of the articles above to edit. Revise the paragraph(s) to the best of your ability. Do not worry about making too many changes; the purpose of this exercise is to see what you notice can be improved in other's writing. Paste the unedited paragraph(s) above your revision.</p>
-    <%= f.text_area :editor_revision, required: true, placeholder: "Write your revision here..." %>
+      <p>Choose one or two paragraphs from one of the articles above to edit. Revise the paragraph(s) to the best of your ability. Do not worry about making too many changes; the purpose of this exercise is to see what you notice can be improved in other's writing. Paste the unedited paragraph(s) above your revision.</p>
+      <%= f.text_area :editor_revision, placeholder: "Write your revision here...", class: "required" %>
 
-    <p>Finally, pitch three new topics that would fit The Teen Magazine's audience as described <a target="_blank" href="/choosing-a-topic">here</a>. Include the title and description you would use.</p>
-    <i>Example:</i><br>
-    <i>Pitch 1 Title: The Stages of All High School Relationships from an Outsider</i><br>
-    <i>Pitch 1 Description: Are you always the friend that gives advice but are never in the relationship? Share your perspective from the outside-in. What do you notice in all your friends' relationships in high school? Do they have a similar pattern? How long do they last and what are those stages? Have fun with it!</i>
-    <%= f.text_area :editor_pitches, required: true, placeholder: "Write your pitches here...", class: "mt-4" %>
-    <%= f.hidden_field :user_id, value: current_user.id %>
-    <%= f.hidden_field :kind, value: "Editor" %>
-    <% @disabled = current_user.editor ? "disabled" : "" %>
-    <div class="btn_cntnr pb-0 mt-4 pt-2" style="float: none !important;">
-      <span data-toggle="tooltip" title="<% if current_user.editor %>You are already an editor<% end %>">
-        <%= f.submit 'Submit Application', class: "newpost--new--profile mr-0 #{@disabled}" %>
-      </span>
-    </div>
-  <% end %>
+      <p class="mt-3">Finally, pitch three new topics that would fit The Teen Magazine's audience as described <a target="_blank" href="/choosing-a-topic">here</a>. Include the title and description you would use.</p>
+      <i>Example:</i><br>
+      <i>Pitch 1 Title: The Stages of All High School Relationships from an Outsider</i><br>
+      <i>Pitch 1 Description: Are you always the friend that gives advice but are never in the relationship? Share your perspective from the outside-in. What do you notice in all your friends' relationships in high school? Do they have a similar pattern? How long do they last and what are those stages? Have fun with it!</i>
+      <%= f.text_area :editor_pitches, placeholder: "Write your pitches here...", class: "mt-4 required" %>
+      <%= f.hidden_field :user_id, value: current_user.id %>
+      <%= f.hidden_field :kind, value: "Editor" %>
+      <% @disabled = current_user.editor ? "disabled" : "" %>
+
+      <div class="btn_cntnr mb-0 mt-4 pt-2" style="float: none; position: relative;">
+        <div class="hide spinner-button spinner-border" style="margin-left: 40%" role="status">
+          <span class="sr-only">Loading...</span>
+        </div>
+        <span data-toggle="tooltip" title="<% if current_user.editor %>You are already an editor<% end %>">
+          <%= f.button "Submit Application", class: "newpost--new--profile mb-0 mr-0 pl-4 pr-4 submit_modal #{@disabled}", id: "submit-application" %>
+        </span>
+      </div>
+    <% end %>
+  </div>
 <% end %>
   <i style="opacity: 50%;" class="d-block">
     Keep in mind that we will also be reviewing your published articles. To have the best chance of being accepted, ensure all your articles are done to the best of your ability. If you have any questions, please reach out to our editors at editors@theteenmagazine.com.
   </i>
 </div>
+
+<script type="text/javascript">
+  $('#pdf-file-resume').bind('change', function() {
+    var size = this.files[0].size/1024/1024;
+    if (size > 1) {
+      alert('The maximum file size is 1 MiB. This file size is: ' + size + " MiB.");
+      $('#pdf-file-resume').val("");
+    }
+  });
+
+  $("#submit-application-form").on("submit", function(event) {
+    unsaved = false;
+  });
+
+  $("#submit-application").click(function() {
+    var $nonempty = $('.required').filter(function() {
+      return this.value != ''
+    });
+    if ($nonempty.length < 3) {
+      alert('There are empty required fields.');
+      return false;
+    } else {
+      $("#submit-application").addClass("disabled");
+      $(".spinner-button").removeClass("hide");
+      return true;
+    }
+  });
+
+  $(":input").change(function(){ //triggers change in all input fields including text type
+    unsaved = true;
+  });
+
+  function unloadPage(){
+    if(unsaved){
+      return "You have unsaved changes on this page. Do you want to leave this page and discard your changes or stay on this page?";
+    }
+  }
+  window.onbeforeunload = unloadPage;
+</script>
