added deadlines to onboarding

--- a/app/views/application_mailer/article_deadline_warning.html.erb
+++ b/app/views/application_mailer/article_deadline_warning.html.erb
@@ -10,7 +10,7 @@
     <p>Hi <%= @user.first_name %>,</p>
       <% if @posts.count.eql? 1 %>
         <p>
-          This is an email notifying you that your draft <%= link_to(@posts.last.title, @posts.last) %> is due in <%= distance_of_time_in_words(Time.now, @posts.last.pitch.deadline_at) %>.
+          This is an email notifying you that your draft <%= link_to(@posts.last.title, @posts.last) %> is due in <%= distance_of_time_in_words(Time.now, @posts.last.deadline_at) %>.
           If you need more time on this pitch, you can use an extension. Find out more about deadlines and extensions <a href="#">here</a>.
         </p>
         <% else %>
@@ -19,7 +19,7 @@
         </p>
         <ol>
           <% @posts.each do |post| %>
-            <li><%= link_to(post.title, post) %> (Due in <%= distance_of_time_in_words(Time.now, @posts.last.pitch.deadline_at) %>)</li>
+            <li><%= link_to(post.title, post) %> (Due in <%= distance_of_time_in_words(Time.now, post.deadline_at) %>)</li>
           <% end %>
         </ol>
         <p>
