--- a/app/assets/stylesheets/onboarding.css.scss
+++ b/app/assets/stylesheets/onboarding.css.scss
@@ -588,7 +588,7 @@ a:hover {
   }
 }
 
-#onboarding_button {
+#onboarding_button, .onboarding_button {
   color: white;
   background-color: #2a2a2a;
   border: 1px solid #2a2a2a;
