--- a/app/views/users/partials/_dashboard_articles.html.erb
+++ b/app/views/users/partials/_dashboard_articles.html.erb
@@ -5,11 +5,11 @@
       <div>
         <h6 id="post-title"><a href="#"><%= link_to post.title, post%></a></h6>
         <p class="edited_dt"><%= "Last edited " + time_ago_in_words(post.updated_at) + " ago" %></p>
-        <% if post.pitch.try(:claimed_id).present? && post.pitch.try(:deadline_at).present? && (post.reviews.last.status.eql? "In Progress") %>
-          <% @class = post.pitch.deadline_at < Date.today + 7.days ? "text-danger" : "" %>
+        <% if post.pitch.try(:claimed_id).present? && post.try(:deadline_at).present? && (post.reviews.last.status.eql? "In Progress") %>
+          <% @class = post.deadline_at < Date.today + 7.days ? "text-danger" : "" %>
           <p class="<%= @class %>">
-            <% if post.pitch.deadline_at > Time.now %>
-              You have <%= distance_of_time_in_words(Time.now, post.pitch.deadline_at) %> left to submit this article for review
+            <% if post.deadline_at > Time.now %>
+              You have <%= distance_of_time_in_words(Time.now, post.deadline_at) %> left to submit this article for review
               <% if @class.present? %> or <a target="_blank" href="#" class="alert-link">use an extention</a>.<% end %>
             <% else %>
               You have passed the deadline. This article's pitch will be automatically unclaimed.
